--- a/css/style.css
+++ b/css/style.css
@@ -26,16 +26,26 @@
 }
 
 .resultContainer h2 {
-    font-size: 50px;
+    font-size: 60px;
+    text-align: center;
 }
 
 .resultContainer h4 {
-    font-size: 25px;
+    font-size: 45px;
     font-style: italic;
+    text-align: center;
 }
 
 .resultContainer p {
     font-size: 13px;
+    text-align: center;
+}
+
+.icon {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
 }
 
 .navBar{
